멤버 삭제 컨트롤러 단에 적용